# RL_for_Multi_Drone_UN

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  paper.bib  paper.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  draft-pdf.yml
case_studies/: relay_node_protocol.py
case_studies/results/: navigation_results.json
case_studies/safety_protocols/: safety_protocols.py  safety_report.json
case_studies/urban_delivery/: scenario.py
cigrl/: __init__.py
cigrl/core/: __init__.py  attention.py  policy.py  sensor_fusion.py
cigrl/envs/: __init__.py  drone.py  urban.py
cigrl/scripts/: __init__.py  evaluate.py  train.py
configs/: inference.yaml  training.yaml
docker/: Dockerfile  entrypoint.sh
experiments/: baseline_controllers.py  cigrl_enhanced_simulation.py  deep_evaluation_results.json  run_actual_training.py  simulation_experiment.py
experiments/metrics/: evaluator.py
experiments/training_logs/: CIGRL_seed0.json  CIGRL_seed1.json  CIGRL_seed2.json  CommNet_seed0.json  CommNet_seed1.json  CommNet_seed2.json  MAPPO-Attn_seed0.json  MAPPO-Attn_seed1.json  MAPPO-Attn_seed2.json  MAPPO_seed0.json  MAPPO_seed1.json  MAPPO_seed2.json  QMIX_seed0.json  QMIX_seed1.json  QMIX_seed2.json  all_training_results.json  results_summary.json
experiments/urban_scenarios/: gnss_degradation.py
experiments/urban_scenarios/configs/: canyon_transit.yaml  delivery.yaml  formation.yaml  surveillance.yaml
paper/: paper.bib  paper.md
ros2_ws/src/cigrl_core/: CMakeLists.txt  package.xml
ros2_ws/src/cigrl_core/communication/: communication_node.py
ros2_ws/src/cigrl_core/mission_planner/: mission_planner_node.py
ros2_ws/src/cigrl_core/policy_node/: cigrl_policy_node.py
ros2_ws/src/cigrl_core/sensor_fusion/: sensor_fusion_node.py
tests/: __init__.py  test_cigrl_core.py  test_sensor_fusion.py
